cambio nommbre web

--- a/website/src/pages/links.astro
+++ b/website/src/pages/links.astro
@@ -4,13 +4,22 @@
 // 1. OFERTAS FLASH (CON FOTO Y PRECIO) - Se verán como tarjetas arriba
 const flashOffers = [
     {
+        name: "Xiaomi Redmi Watch 5",
+        desc: "Llamadas Bluetooth, 18 días batería y pantalla gigante 2''.",
+        price: "24,59€",
+        oldPrice: "35,99€",
+        discount: "-32%",
+        img: "https://m.media-amazon.com/images/I/51lP8jxFxVL._AC_SX425_.jpg",
+        url: "https://amzn.to/3NbKqCB" // <--- TU NUEVO LINK DEL RELOJ
+    },
+    {
         name: "Altavoz Ducha Impermeable",
         desc: "Ventosa fuerte, sonido HD y 100% resistente al agua.",
         price: "10,44€",
         oldPrice: "19,99€",
         discount: "-48%",
         img: "https://m.media-amazon.com/images/I/71n+D0vaORL._AC_SX679_.jpg",
-        url: "https://amzn.to/4qDXjnv" // <--- TU LINK DEL ALTAVOZ
+        url: "https://amzn.to/4qDXjnv"
     },
     {
         name: "Ratón Logitech B100",
